--- a/bases/flux-app-v2/giantswarm/tests/flux-operator/singleton-flux-instance/kyverno-test.yaml
+++ b/bases/flux-app-v2/giantswarm/tests/flux-operator/singleton-flux-instance/kyverno-test.yaml
@@ -1,21 +1,21 @@
 apiVersion: cli.kyverno.io/v1alpha1
 kind: Test
 metadata:
-  name: require-serviceaccount
+  name: singleton-flux-instance
 policies:
   - ../../../resource-kyverno-policies.yaml
 resources:
   - resources.yaml
 results:
   - policy: flux-multi-tenancy
-    rule: serviceAccountNameMustBeSet
+    rule: fluxInstanceMustBeSingleton
     resources:
-    - ns1/test
-    kind: ResourceSet
-    result: fail
-  - policy: flux-multi-tenancy
-    rule: serviceAccountNameMustBeSet
-    resources:
-    - ns2/test
+    - flux-giantswarm/flux
     kind: ResourceSet
     result: pass
+  - policy: flux-multi-tenancy
+    rule: fluxInstanceMustBeSingleton
+    resources:
+    - org-test/flux
+    kind: ResourceSet
+    result: fail
