--- a/bases/flux-app-v2/giantswarm/tests/flux-operator/correct-target-namespace/kyverno-test.yaml
+++ b/bases/flux-app-v2/giantswarm/tests/flux-operator/correct-target-namespace/kyverno-test.yaml
@@ -1,21 +1,27 @@
 apiVersion: cli.kyverno.io/v1alpha1
 kind: Test
 metadata:
-  name: require-serviceaccount
+  name: correct-target-namespace
 policies:
   - ../../../resource-kyverno-policies.yaml
 resources:
   - resources.yaml
 results:
   - policy: flux-multi-tenancy
-    rule: serviceAccountNameMustBeSet
+    rule: resourceSetTargetNamespaceMustBeLocal
     resources:
     - ns1/test
     kind: ResourceSet
-    result: fail
+    result: pass
   - policy: flux-multi-tenancy
-    rule: serviceAccountNameMustBeSet
+    rule: resourceSetTargetNamespaceMustBeLocal
     resources:
     - ns2/test
     kind: ResourceSet
     result: pass
+  - policy: flux-multi-tenancy
+    rule: resourceSetTargetNamespaceMustBeLocal
+    resources:
+    - ns3/test
+    kind: ResourceSet
+    result: fail
