--- a/bases/flux-operator/helmrelease.yaml
+++ b/bases/flux-operator/helmrelease.yaml
@@ -24,6 +24,8 @@ spec:
       retries: 3
   values:
     flux-operator:
+      multitenancy:
+        enabled: true
       extraEnvs:
       - name: NOTIFICATIONS_DISABLED
         value: "1"
