Add kustomization listing

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,7 +9,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-      - name: Lint kustomization.yaml
+      - name: List kustomizations
+        uses: docker://gsoci.azurecr.io/giantswarm/yamllint:1.0.0
+        with:
+          args: --list-files management-clusters
+
+      - name: Lint kustomizations
         uses: docker://gsoci.azurecr.io/giantswarm/yamllint:1.0.0
         with:
           args: --format=github management-clusters
