--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,15 +7,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Lint kustomization.yaml
-        uses: docker://quay.io/giantswarm/yamllint:1.26
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+
+      - name: List kustomizations
+        uses: docker://gsoci.azurecr.io/giantswarm/yamllint:1.0.0
         with:
-          args: management-clusters/
+          args: --list-files management-clusters
+
+      - name: Lint kustomizations
+        uses: docker://gsoci.azurecr.io/giantswarm/yamllint:1.0.0
+        with:
+          args: --format=github management-clusters
+
       - name: "Build manifest in 'output/'"
         run: |
           ls management-clusters/ | xargs -n1 -I '{}' make build-{}
-      - name: Lint generated manifests
-        uses: docker://quay.io/giantswarm/yamllint:1.26
+
+      - name: List generated manifests
+        uses: docker://gsoci.azurecr.io/giantswarm/yamllint:1.0.0
         with:
-          args: output/
+          args: --list-files output
+
+      - name: Lint generated manifests
+        uses: docker://gsoci.azurecr.io/giantswarm/yamllint:1.0.0
+        with:
+          args: --format=github output
