--- a/.github/workflows/silences-validate.yaml
+++ b/.github/workflows/silences-validate.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Validate silences
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           # Fetch all history so silences-validate.sh can find changed files.
           fetch-depth: 0
