Restrict Renovate to only update GitHub actions and Renovate config presets (#299)
Attempt to change the Renovate config so that only GitHub actions in
workflows are touched, to avoid more dangerous upgrades and reduce
noise.

--- a/renovate.json5
+++ b/renovate.json5
@@ -4,4 +4,15 @@
     // Base config - https://github.com/giantswarm/renovate-presets/blob/main/default.json5
     "github>giantswarm/renovate-presets:default.json5",
   ],
+  "packageRules": [
+    {
+      "description": "Disable managers we consider dangerous or unnecessary here",
+      "matchManagers": [
+        "kubernetes",
+        "kustomize",
+        "pip_requirements",
+      ],
+      "enabled": false
+    },
+  ]
 }
