--- a/extras/zot-cache/values.yaml
+++ b/extras/zot-cache/values.yaml
@@ -143,7 +143,7 @@ configFiles:
                 "tlsVerify": true,
                 "maxRetries": 3,
                 "preserveDigest": true,
-                "retryDelay": "1ms"
+                "retryDelay": "1µs"
               }
             ]
           },
