Add some more stuff to stable stage

--- a/extras/external-secrets/stages/stable/kustomization.yaml
+++ b/extras/external-secrets/stages/stable/kustomization.yaml
@@ -1,5 +1,7 @@
 resources:
   - ../../base
+  - manifest-configmap.yaml
 patches:
   - path: patch-version.yaml
-g
+  - path: patch-remove-namespace.yaml
+
