--- a/extras/external-secrets/kustomization.yaml
+++ b/extras/external-secrets/kustomization.yaml
@@ -1,4 +1,3 @@
+# keep this kustomization.yaml for backwards compatibility
 resources:
-- namespace-external-secrets.yaml
-- helmrelease-external-secrets.yaml
-- podmonitor-external-secrets.yaml
+  - ./base
