Removing one rule

--- a/bases/flux-app-v2/giantswarm/resource-kyverno-policies.yaml
+++ b/bases/flux-app-v2/giantswarm/resource-kyverno-policies.yaml
@@ -59,10 +59,8 @@ spec:
             - HelmRelease
       validate:
         message: >-
-          The .spec.chart.spec.sourceRef is allowed to unconditionally refer to either default
-          or local namespace. The giantswarm namespace is allowed under condition the HelmRepository
-          kind of the ?*-catalog name is referred. The .spec.chartRef is allowed to refer to either
-          default or local namespace.
+          Both, the .spec.chart.spec.sourceRef and the .spec.chartRef, field are allowed to
+          unconditionally refer to either default or local namespace.
         anyPattern:
           - spec:
               chart:
@@ -72,13 +70,6 @@ spec:
           - spec:
               chartRef:
                 =(namespace): "default"
-          - spec:
-              chart:
-                spec:
-                  sourceRef:
-                    (namespace): "giantswarm"
-                    kind: "HelmRepository"
-                    name: "?*-catalog"
           - spec:
               chartRef:
                 =(namespace): "{{request.object.metadata.namespace}}"
