Introducing cross-namespace references for HRs (#144)
Originally this PR has been opened for the:
https://github.com/giantswarm/roadmap/issues/2455 which got closed as
something that won't be done.
 
It is now again relevant due to other obligations. 

## Some hints on changes to this repository

### Public information only

This is a public repository. The content and commit history is visible
to everyone.

Do not provide any **customer-specific details**. Use the customer's
repository for that.

### Descriptive PR title

Please write a descriptive pull request title. In this repo we don't
maintain a changelog file, so the PR title (becoming the commit message
after squash-merge) is the main information to understand a change in
retrospect.

--- a/bases/flux-app-v2/giantswarm/resource-kyverno-policies.yaml
+++ b/bases/flux-app-v2/giantswarm/resource-kyverno-policies.yaml
@@ -58,13 +58,21 @@ spec:
           kinds:
             - HelmRelease
       validate:
-        message: "spec.chart.spec.sourceRef.namespace must be the same as metadata.namespace or 'default'"
+        message: >-
+          Both, the .spec.chart.spec.sourceRef and the .spec.chartRef, field are allowed to
+          unconditionally refer to either default or local namespace.
         anyPattern:
           - spec:
               chart:
                 spec:
                   sourceRef:
                     =(namespace): "default"
+          - spec:
+              chartRef:
+                =(namespace): "default"
+          - spec:
+              chartRef:
+                =(namespace): "{{request.object.metadata.namespace}}"
           - spec:
               chart:
                 spec:
