Find the right order and manifest types to get a sensible / sequential order of patches
See: https://github.com/kubernetes/enhancements/tree/master/keps/sig-cli/1802-kustomize-components#proposal

--- a/bases/collections/capa/stages/stable/kustomization.yaml
+++ b/bases/collections/capa/stages/stable/kustomization.yaml
@@ -1,4 +1,17 @@
-patches:
-  - path: ../../base/patches/konfiguration.v2.yaml
+components:
+#  - ../../../shared/stages/stable
+  - ../../base
+patches: []
+#  - target:
+#      kind: App
+#      name: app-operator
+#      namespace: giantswarm
+#    patch: '[{"op": "replace", "path": "/spec/version", "value": "7.2.0"}]'
+#  - target:
+#      kind: App
+#      name: aws-vpc-operator
+#      namespace: giantswarm
+#    patch: '[{"op": "replace", "path": "/spec/version", "value": "0.6.0"}]'
 resources:
+#  - ../../base
   - ../../../shared/stages/stable
