--- a/bases/collections/capa-asia/base/kustomization.yaml
+++ b/bases/collections/capa-asia/base/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 patches:
+  - path: patches/konfiguration.v2.yaml
   - target:
       kind: App
       name: hello-world
