--- a/bases/silences/atlas-managementclustercertificateismissing.yaml
+++ b/bases/silences/atlas-managementclustercertificateismissing.yaml
@@ -15,3 +15,6 @@ spec:
     - name: exported_namespace
       value: "monitoring|loki|mimir|tempo"
       matchType: "=~"
+    - name: cluster_id
+      value: ".*"
+      matchType: "=~"
