--- a/bases/flux-app-v2/giantswarm/resource-kyverno-clusterrole.yaml
+++ b/bases/flux-app-v2/giantswarm/resource-kyverno-clusterrole.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     application.giantswarm.io/team: honeybadger
     rbac.kyverno.io/aggregate-to-admission-controller: "true"
+    rbac.kyverno.io/aggregate-to-reports-controller: "true"
   name: kyverno:gs-mcb:flux-multi-tenancy
 rules:
   - apiGroups:
