Add kyverno-clusterrole for ESO

--- a/extras/external-secrets/kustomization.yaml
+++ b/extras/external-secrets/kustomization.yaml
@@ -1,4 +1,5 @@
 resources:
-- namespace-external-secrets.yaml
-- helmrelease-external-secrets.yaml
-- podmonitor-external-secrets.yaml
+  - namespace-external-secrets.yaml
+  - helmrelease-external-secrets.yaml
+  - podmonitor-external-secrets.yaml
+  - kyverno-clusterrole.yaml
