Add missing patches for default stage variable

--- a/bases/collections/shared/stages/stable/kustomization.yaml
+++ b/bases/collections/shared/stages/stable/kustomization.yaml
@@ -1,3 +1,8 @@
-patches: []
+patches:
+  - target:
+      kind: Konfiguration
+      name: collection-konfiguration
+      namespace: giantswarm
+    patch: '[{"op": "add", "path": "/spec/targets/defaults/variables/-", "value": {"name": "stage", "value": "stable"}}]'
 resources:
   - ../../base
