--- a/bases/collections/capa/base/kustomization.yaml
+++ b/bases/collections/capa/base/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 patches:
-  - path: patch_konfiguration.v2.yaml
+  - path: patches/konfiguration.v2.yaml
   - target:
       kind: App
       name: app-operator
