Add silence mimiralertmanagernotificationsfailing

--- a/bases/silences/kustomization.yaml
+++ b/bases/silences/kustomization.yaml
@@ -4,3 +4,4 @@ resources:
   - atlas-managementclustercertificateismissing.yaml
   - atlas-mimirrulerruleevaluationfailures.yaml
   - atlas-grafanapostgresqlrecoverytestfailed.yaml
+  - mimiralertmanagernotificationsfailing.yaml
