--- a/bases/provider/vsphere/flux-v2/kustomization.yaml
+++ b/bases/provider/vsphere/flux-v2/kustomization.yaml
@@ -5,5 +5,6 @@ patches:
 resources:
   - ../../../flux-app-v2/giantswarm
   - ../../../flux-giantswarm-resources
+  - ../../../flux-operator
   - ../releases
   - configmap-provider-data.yaml
