--- a/bases/flux-operator/kustomization.yaml
+++ b/bases/flux-operator/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - clusterpolicy.yaml
+  #- clusterpolicy.yaml
   - helmrelease.yaml
   - clusterrole.yaml
