--- a/bases/crds/flux-operator/crds.yaml
+++ b/bases/crds/flux-operator/crds.yaml
@@ -1163,8 +1163,6 @@ metadata:
     controller-gen.kubebuilder.io/version: v0.18.0
   name: resourcesets.fluxcd.controlplane.io
 spec:
-  conversion:
-    strategy: None
   group: fluxcd.controlplane.io
   names:
     kind: ResourceSet
@@ -1188,7 +1186,7 @@ spec:
     name: v1
     schema:
       openAPIV3Schema:
-        description: ResourceSet is the Schema for the ResourceSets API.
+        description: ResourceSet is the Schema for the ResourceSets APIs.
         properties:
           apiVersion:
             description: |-
