--- a/bases/crds/flux-operator/crds.yaml
+++ b/bases/crds/flux-operator/crds.yaml
@@ -1186,7 +1186,7 @@ spec:
     name: v1
     schema:
       openAPIV3Schema:
-        description: ResourceSet is the Schema for the ResourceSets APIs.
+        description: ResourceSet is the Schema for the ResourceSets API.
         properties:
           apiVersion:
             description: |-
