--- a/bases/silences/kustomization.yaml
+++ b/bases/silences/kustomization.yaml
@@ -4,3 +4,5 @@ resources:
   - atlas-managementclustercertificateismissing.yaml
   - atlas-mimirrulerruleevaluationfailures.yaml
   - mimiralertmanagernotificationsfailing.yaml
+  - grafana-down.yaml
+  - grafana-postgresql.yaml
