refactor(mcp-kubernetes): Use Konfiguration for DRY config
Replace hardcoded values with Konfiguration CR that renders templates
from shared-configs. This follows the same pattern as app-collections
but for MCB extras.

Changes:
- Add konfiguration.yaml to render shared-configs templates
- Update HelmRelease to reference Konfiguration-rendered ConfigMap/Secret
- Remove hardcoded values.yaml and mcp-kubernetes-values.yaml
- Update README with usage instructions

The configuration is now sourced from:
- shared-configs/default/apps/mcp-kubernetes/configmap-values.yaml.template
- giantswarm-configs/installations/<mc>/apps/mcp-kubernetes/secret-values.yaml.patch

--- a/extras/mcp-kubernetes/helm-release.yaml
+++ b/extras/mcp-kubernetes/helm-release.yaml
@@ -25,6 +25,12 @@ spec:
       retries: 10
       remediateLastFailure: false
   valuesFrom:
+    # ConfigMap rendered by Konfiguration from shared-configs template
     - kind: ConfigMap
-      name: mcp-kubernetes-values
-      valuesKey: values.yaml
+      name: mcp-kubernetes-konfiguration
+      valuesKey: values
+    # Secret rendered by Konfiguration from giantswarm-configs
+    - kind: Secret
+      name: mcp-kubernetes-konfiguration
+      valuesKey: values
+      optional: true
