--- a/extras/mcp-kubernetes/kustomization.yaml
+++ b/extras/mcp-kubernetes/kustomization.yaml
@@ -1,15 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-generatorOptions:
-  disableNameSuffixHash: true
 
 resources:
   - ./namespace.yaml
   - ./helm-release.yaml
-  - ./mcp-kubernetes-values.yaml
-
-configMapGenerator:
-  - name: mcp-kubernetes-values
-    namespace: flux-giantswarm
-    files:
-      - ./values.yaml
+  - ./konfiguration.yaml
