--- a/extras/crossplane/providers/upbound/aws/service-account.yaml
+++ b/extras/crossplane/providers/upbound/aws/service-account.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: replaced by kustomization
+  name: upbound-provider-aws
   namespace: crossplane
   annotations: {}
   labels:
