--- a/extras/crossplane/providers/upbound/aws/cloudwatch.yaml
+++ b/extras/crossplane/providers/upbound/aws/cloudwatch.yaml
@@ -10,7 +10,7 @@ spec:
   revisionActivationPolicy: Automatic
   revisionHistoryLimit: 0
   skipDependencyResolution: true
-  package: gsoci.azurecr.io/giantswarm/upbound-provider-aws-cloudwatchevents:v${awsversion:=1.21.0}
+  package: gsoci.azurecr.io/giantswarm/upbound-provider-aws-cloudwatchevents:v1.21.0
   runtimeConfigRef:
     name: upbound-provider-aws
 ---
@@ -25,6 +25,6 @@ spec:
   revisionActivationPolicy: Automatic
   revisionHistoryLimit: 0
   skipDependencyResolution: true
-  package: gsoci.azurecr.io/giantswarm/upbound-provider-aws-cloudwatchlogs:v${awsversion:=1.21.0}
+  package: gsoci.azurecr.io/giantswarm/upbound-provider-aws-cloudwatchlogs:v1.21.0
   runtimeConfigRef:
     name: upbound-provider-aws
