--- a/extras/crossplane/providers/upbound/aws/kms.yaml
+++ b/extras/crossplane/providers/upbound/aws/kms.yaml
@@ -10,6 +10,6 @@ spec:
   revisionActivationPolicy: Automatic
   revisionHistoryLimit: 0
   skipDependencyResolution: true
-  package: gsoci.azurecr.io/giantswarm/upbound-provider-aws-kms:v${awsversion:=1.21.0}
+  package: gsoci.azurecr.io/giantswarm/upbound-provider-aws-kms:v1.21.0
   runtimeConfigRef:
     name: upbound-provider-aws
