fix(mcp-kubernetes): correct valuesKey to match Konfiguration output
The Konfiguration operator creates ConfigMaps with keys matching the
template filename (configmap-values.yaml), not 'values'. This caused
HelmRelease failures with 'key not found' error.

--- a/extras/mcp-kubernetes/helm-release.yaml
+++ b/extras/mcp-kubernetes/helm-release.yaml
@@ -28,4 +28,4 @@ spec:
     # ConfigMap rendered by Konfiguration from shared-configs template
     - kind: ConfigMap
       name: mcp-kubernetes-konfiguration
-      valuesKey: values
+      valuesKey: configmap-values.yaml
