feat(mcp-kubernetes): add Valkey storage for OAuth sessions
- Bump mcp-kubernetes chart to 0.0.78 (adds Valkey storage support)
- Add Valkey HelmRelease for session storage backend
- Valkey runs in standalone mode with auto-generated password

Benefits of Valkey storage:
- Session persistence across pod restarts
- Support for horizontal scaling with shared state
- Rolling updates without user session loss

--- a/extras/mcp-kubernetes/kustomization.yaml
+++ b/extras/mcp-kubernetes/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 
 resources:
   - ./namespace.yaml
+  - ./valkey-helm-release.yaml
   - ./helm-release.yaml
   - ./konfiguration.yaml
