fix(mcp-kubernetes): add security context for valkey Kyverno compliance
Add required security context settings for Kyverno policies:
- seccompProfile.type: RuntimeDefault
- allowPrivilegeEscalation: false

Fixes policy violations:
- disallow-privilege-escalation
- restrict-seccomp-strict

--- a/extras/mcp-kubernetes/valkey-helm-release.yaml
+++ b/extras/mcp-kubernetes/valkey-helm-release.yaml
@@ -39,6 +39,20 @@ spec:
           passwordKey: "default"
     valkey:
       architecture: standalone
+      # Pod security context for Kyverno compliance
+      podSecurityContext:
+        seccompProfile:
+          type: RuntimeDefault
+      # Container security context for Kyverno compliance
+      containerSecurityContext:
+        allowPrivilegeEscalation: false
+        seccompProfile:
+          type: RuntimeDefault
+      # Init container security context
+      initContainerSecurityContext:
+        allowPrivilegeEscalation: false
+        seccompProfile:
+          type: RuntimeDefault
       master:
         persistence:
           enabled: false  # Session data doesn't need persistence
