fix(mcp-kubernetes): use correct valkey security context path
The valkey chart uses 'securityContext' (not containerSecurityContext).
This security context is applied to both main and init containers.

Settings added:
- allowPrivilegeEscalation: false
- seccompProfile.type: RuntimeDefault
- Standard container security hardening

--- a/extras/mcp-kubernetes/valkey-helm-release.yaml
+++ b/extras/mcp-kubernetes/valkey-helm-release.yaml
@@ -41,15 +41,19 @@ spec:
       architecture: standalone
       # Pod security context for Kyverno compliance
       podSecurityContext:
+        fsGroup: 1000
+        runAsUser: 1000
+        runAsGroup: 1000
         seccompProfile:
           type: RuntimeDefault
-      # Container security context for Kyverno compliance
-      containerSecurityContext:
-        allowPrivilegeEscalation: false
-        seccompProfile:
-          type: RuntimeDefault
-      # Init container security context
-      initContainerSecurityContext:
+      # Container security context for Kyverno compliance (used by main and init containers)
+      securityContext:
+        capabilities:
+          drop:
+            - ALL
+        readOnlyRootFilesystem: true
+        runAsNonRoot: true
+        runAsUser: 1000
         allowPrivilegeEscalation: false
         seccompProfile:
           type: RuntimeDefault
