fix(mcp-kubernetes): add metrics exporter security context for Kyverno
The valkey chart has a metrics exporter sidecar container that also needs
Kyverno-compliant security context settings.

This adds:
- metrics.exporter.securityContext with:
  - allowPrivilegeEscalation: false
  - seccompProfile.type: RuntimeDefault
  - Standard container security hardening

Without this, Kyverno blocks the valkey deployment with:
  disallow-privilege-escalation policy violation on containers/1/

--- a/extras/mcp-kubernetes/valkey-helm-release.yaml
+++ b/extras/mcp-kubernetes/valkey-helm-release.yaml
@@ -69,6 +69,18 @@ spec:
             memory: 64Mi
       metrics:
         enabled: true
+        # Metrics exporter security context for Kyverno compliance
+        exporter:
+          securityContext:
+            capabilities:
+              drop:
+                - ALL
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 1000
+            allowPrivilegeEscalation: false
+            seccompProfile:
+              type: RuntimeDefault
         podMonitor:
           enabled: true
           additionalLabels:
