refactor(mcp-kubernetes): migrate to OCIRepository with auto-updates
Migrate mcp-kubernetes and valkey HelmReleases to use OCIRepository
instead of HelmRepository for chart sources. This enables:

- OCI-native chart delivery from gsoci.azurecr.io
- Automatic version updates via SemVer range (>=0.0.0)
- Modern Flux v2 API (helm.toolkit.fluxcd.io/v2)

Changes:
- Add oci-repository.yaml for mcp-kubernetes chart
- Add valkey-oci-repository.yaml for valkey chart
- Update HelmReleases to use chartRef with OCIRepository
- Update API version from v2beta2 to v2
- Update README with current deployment approach

--- a/extras/mcp-kubernetes/kustomization.yaml
+++ b/extras/mcp-kubernetes/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 
 resources:
   - ./namespace.yaml
-  - ./valkey-helm-release.yaml
+  - ./oci-repository.yaml
+  - ./valkey-oci-repository.yaml
   - ./helm-release.yaml
+  - ./valkey-helm-release.yaml
   - ./konfiguration.yaml
