--- a/extras/mcp-kubernetes/valkey-helm-release.yaml
+++ b/extras/mcp-kubernetes/valkey-helm-release.yaml
@@ -1,23 +1,18 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: mcp-kubernetes-valkey
   namespace: flux-giantswarm
 spec:
-  chart:
-    spec:
-      chart: valkey
-      reconcileStrategy: ChartVersion
-      sourceRef:
-        kind: HelmRepository
-        name: giantswarm-catalog
-        namespace: flux-giantswarm
-      version: 0.1.2
+  chartRef:
+    kind: OCIRepository
+    name: mcp-kubernetes-valkey
+    namespace: flux-giantswarm
   install:
     remediation:
       retries: 10
       remediateLastFailure: false
-  interval: 1m
+  interval: 10m
   targetNamespace: mcp-kubernetes
   timeout: 10m
   upgrade:
