fix(muster): add fullnameOverride to valkey to prevent double naming
The muster-valkey HelmRelease creates pods with double naming. Adding
fullnameOverride: muster-valkey ensures the pods are named correctly.

--- a/extras/muster/valkey-helm-release.yaml
+++ b/extras/muster/valkey-helm-release.yaml
@@ -21,6 +21,8 @@ spec:
       remediateLastFailure: false
   values:
     # Valkey standalone mode for muster OAuth session storage
+    # Override fullname to avoid double naming (muster-valkey-valkey -> muster-valkey)
+    fullnameOverride: muster-valkey
     # Auth configuration at root level for subchart
     auth:
       enabled: true
