fix(muster): add releaseName to HelmReleases
The root cause of the double naming (muster-muster) is that Flux
generates a prefixed release name when targetNamespace differs from
the HelmRelease namespace. Adding explicit releaseName fixes this
at the Helm release level.

This follows the pattern used by other HelmReleases in the codebase
such as grafana, prometheus-operator-crd, external-dns, etc.

--- a/extras/muster/helm-release.yaml
+++ b/extras/muster/helm-release.yaml
@@ -4,6 +4,9 @@ metadata:
   name: muster
   namespace: flux-giantswarm
 spec:
+  # Explicitly set release name to avoid Flux generating a prefixed name
+  # when targetNamespace differs from HelmRelease namespace
+  releaseName: muster
   chartRef:
     kind: OCIRepository
     name: muster
