fix(mcp-kubernetes): add releaseName to prevent double naming
Add releaseName to mcp-kubernetes and mcp-kubernetes-valkey HelmReleases
to fix the same double naming issue that affected muster.

Current pod names:
- mcp-kubernetes-mcp-kubernetes-xxx
- mcp-kubernetes-mcp-kubernetes-valkey-xxx

Expected (after fix):
- mcp-kubernetes-xxx
- mcp-kubernetes-valkey-xxx

Also removes unnecessary fullnameOverride from muster valkey since
releaseName is the proper fix at the Helm release level.

--- a/extras/mcp-kubernetes/helm-release.yaml
+++ b/extras/mcp-kubernetes/helm-release.yaml
@@ -4,6 +4,9 @@ metadata:
   name: mcp-kubernetes
   namespace: flux-giantswarm
 spec:
+  # Explicitly set release name to avoid Flux generating a prefixed name
+  # when targetNamespace differs from HelmRelease namespace
+  releaseName: mcp-kubernetes
   chartRef:
     kind: OCIRepository
     name: mcp-kubernetes
