--- a/bases/crds/giantswarm/stages/testing/kustomization.yaml
+++ b/bases/crds/giantswarm/stages/testing/kustomization.yaml
@@ -1,8 +1,8 @@
 resources:
-  - ../stable/app-platform
-  - ../stable/konfigure-operator
-  - ../stable/observability-bundle
-  - ../stable/organization-operator
-  - ../stable/rbac-operator
-  - ../stable/releases
-  - ../stable/silence-operator
+  - app-platform
+  - konfigure-operator
+  - observability-bundle
+  - organization-operator
+  - rbac-operator
+  - releases
+  - silence-operator
