--- a/tests/bases/flux-operator-kyverno/singleton-flux-instance/kyverno-test.yaml
+++ b/tests/bases/flux-operator-kyverno/singleton-flux-instance/kyverno-test.yaml
@@ -3,17 +3,17 @@ kind: Test
 metadata:
   name: singleton-flux-instance
 policies:
-  - ../../../resource-kyverno-policies.yaml
+  - ../../../../bases/flux-operator/clusterpolicy.yaml
 resources:
   - resources.yaml
 results:
-  - policy: flux-multi-tenancy
+  - policy: flux-operator-multi-tenancy
     rule: fluxInstanceMustBeSingleton
     resources:
     - flux-giantswarm/flux
     kind: ResourceSet
     result: pass
-  - policy: flux-multi-tenancy
+  - policy: flux-operator-multi-tenancy
     rule: fluxInstanceMustBeSingleton
     resources:
     - org-test/flux
